@@ -2,8 +2,8 @@
 ## APIVersion: 100034 100033
 ## Author: Shadowfen, crafty35a, RockingDice, Friday_the13_rus
 ## Description: Type "/ac" for settings
-## Version: 2.14
-## AddOnVersion: 41
+## Version: 2.15
+## AddOnVersion: 42
 ## SavedVariables: AutoCategorySavedVars
 ## DependsOn: LibAddonMenu-2.0 LibSFUtils LibMediaProvider-1.0 LibDebugLogger
 ## OptionalDependsOn: InventoryGridView GearChangerByIakoni FCOItemSaver QuickMenu ItemSaver UnknownTracker
